[tool.poetry]
name = "ringle-tutor-analysis"
version = "1"
description = "Ringle Tutor Analysis"
authors = ["weekwith.me <leedobby@weekwith.me>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
